--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/fontawesome.min.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <style>
 
     </style>
@@ -181,7 +182,7 @@
 
         <!-- Start card statistics -->
         <div class="card_statistics">
-            <h3 class="counter">400 <span>K</span></h3>
+            <h3 class="counter">400.000</h3>
             <p>ساعة عمل تم تغطيتها</p>
         </div>
         <!-- End card statistics -->
@@ -194,6 +195,338 @@
         <!-- End card statistics -->
     </section>
     <!-- =========== ? statistics =========== -->
+
+    <!-- =========== ? company =========== -->
+    <section class="company">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-5 col-12">
+                    <p class="text-header">للشركات</p>
+                    <h4 class="title_section">كفو تُتيح لك بكل سهولة طلب الموظفين
+                        و تلبيه جميع احتياجات شركتك الخاصة</h4>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <div class="number">1</div> قم بتسجيل دخولك
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>
+                                        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
+                                        هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
+                                        العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <div class="number">2</div>
+                                    ادخل القسم الخاص بشركتك
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>
+                                        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
+                                        هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
+                                        العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <div class="number">3</div>
+                                    اختر الموظف المرشح لك من كفو
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>
+                                        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
+                                        هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
+                                        العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn order_btn">اطلب موظفينك الان</button>
+                    </div>
+                </div>
+                <div class="col-lg-7 col-12">
+                    <div class="image_company">
+                        <img src="./media/image/company.jpg" alt="company">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== ? company =========== -->
+
+    <!-- =========== ? best platform =========== -->
+    <div class="best_platform">
+        <div class="container">
+            <h5 class="title_section">افضل منصة للشركات تستطيع من خلالها
+                توظيف و متابعة موظفينك باستمرار</h5>
+            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
+                أن
+                تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+            </p>
+            <img src="./media/image/laptop.png" alt="laptop">
+        </div>
+    </div>
+    <!-- =========== ? best platform =========== -->
+
+    <!-- =========== ? partners =========== -->
+    <section class="partners">
+        <div class="container">
+            <div class="swiper partnersSwiper">
+                <div class="swiper-wrapper">
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo1.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo2.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo3.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo7.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo1.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo2.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo3.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/partners/logo7.png" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Initialize Swiper -->
+        <script>
+            var swiper = new Swiper(".partnersSwiper", {
+                slidesPerView: 7,
+                spaceBetween: 30,
+                slidesPerGroup: 1,
+                loop: true,
+                loopFillGroupWithBlank: true,
+            });
+        </script>
+        <!-- =========== ? partners =========== -->
+    </section>
+    <!-- =========== ? partners =========== -->
+
+    <!-- =========== ? employment =========== -->
+    <section class="employment">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-12">
+                    <div class="d-flex flex-wrap">
+                        <!-- Start Card step -->
+                        <div class="card_step">
+                            <img src="./media/image/icon/user.svg" alt="card step img">
+                            <h5>انشأ حسابك</h5>
+                            <p>يجب عليك أولاً ان تقم بأنشاء
+                                الحساب الخاص بك</p>
+                        </div>
+                        <!-- End Card step -->
+
+                        <!-- Start Card step -->
+                        <div class="card_step">
+                            <img src="./media/image/icon/download.svg" alt="card step img">
+                            <h5>سيرتك الذاتية</h5>
+                            <p>للحصول علي الوظيفة المٌقدم عليها
+                                يحب عليك انشاء السيرة الذاتية الخاصة بك</p>
+                        </div>
+                        <!-- End Card step -->
+
+                        <!-- Start Card step -->
+                        <div class="card_step">
+                            <img src="./media/image/icon/search.svg" alt="card step img">
+                            <h5>ابحث عن وظيفتك</h5>
+                            <p>و أخيراً قم بالتقدم علي الوظيفة
+                                و استمتع معنا بالعمل المٌفضل لك</p>
+                        </div>
+                        <!-- End Card step -->
+
+                        <!-- Start Card step -->
+                        <div class="card_step">
+                            <img src="./media/image/icon/check.svg" alt="card step img">
+                            <h5>قدم علي الوظيفة</h5>
+                            <p>و أخيراً قم بالتقدم علي الوظيفة
+                                و استمتع معنا بالعمل المٌفضل لك</p>
+                        </div>
+                        <!-- End Card step -->
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="download_buttons">
+                        <p class="text-header">للتوظيف</p>
+                        <h4 class="title_section">فقط اربع خطوات لطلب وظيفتك</h4>
+                        <p class="text">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من
+                            مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة
+                            عدد الحروف التى يولدها التطبيق. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                            توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص </p>
+                        <a href="#" class="btn apple_store"><img src="./media/image/apple_store.jpg"
+                                alt="apple store"></a>
+                        <a href="#" class="btn google_play"><img src="./media/image/google_play.jpg"
+                                alt="google play"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== ? employment =========== -->
+
+    <!-- =========== ? download =========== -->
+    <section class="download">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <h3>حمل تطبيق كفو الان</h3>
+                    <ul>
+                        <li>قم الان بتحميل تطبيق كفو لإيجاد الوظيفة الخاصة بك بسهولة و تطوير نفسك و مهاراتك</li>
+                        <li>عن طريق التطبيق نقوم بترشيح الوظائف المناسبة لك و لمؤهلك و المناسبة لمجالك</li>
+                    </ul>
+                    <div class="download_buttons">
+                        <a href="#" class="btn"><img src="./media/image/google_play_btn.jpg" alt="download"></a>
+                        <a href="#" class="btn"><img src="./media/image/apple_store_btn.jpg" alt="download"></a>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="image_download">
+                        <img src="./media/image/download.png" alt="download">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========== ? download =========== -->
+
+
+    <section class="application">
+        <div class="container">
+            <h3>بعض شاشات التطبيق</h3>
+            <div class="swiper applicationSwiper">
+                <div class="swiper-wrapper">
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/one.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/two.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/three.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/four.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/five.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/one.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/two.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+
+                    <!-- For loop this swiper slide -->
+                    <div class="swiper-slide">
+                        <img src="./media/image/application/three.jpg" alt="logo">
+                    </div>
+                    <!-- For loop this swiper slide -->
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+
+        <!-- Initialize Swiper -->
+        <script>
+            var swiper = new Swiper(".applicationSwiper", {
+                slidesPerView: 5,
+                spaceBetween: 30,
+                slidesPerGroup: 1,
+                loop: true,
+                loopFillGroupWithBlank: true,
+                pagination: {
+                    el: ".swiper-pagination",
+                    clickable: true,
+                },
+            });
+        </script>
+    </section>
+
+    <script src="js/counterup.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script>
+        $('.counter').counterUp({
+            delay: 20,
+            time: 2000
+        });
+    </script>
 </body>
 
 </html>
